name:                pandoc-types-lens
version:             0.0.1.0
synopsis:            Prisms, Lenses, Traversals and orphans for pandoc-types.
description:         Prisms, Lenses, Traversals and orphans for pandoc-types.
homepage:            http://github.com/cchalmers/pandoc-types-lens
license:             GPL
license-file:        LICENSE
author:              Christopher Chalmers
maintainer:          c.chalmers@me.com
copyright:           (c) 2015 Christopher Chalmers
category:            Text
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            git://github.com/cchalmers/pandoc-types-lenses

library
  exposed-modules:     Text.Pandoc.Definition.Lens
  build-depends:
    base         >=4.6  && <4.8,
    pandoc-types >=1.12 && <1.13,
    lens         >=4.2  && <4.9,
    semigroups
  default-language:    Haskell2010
  hs-source-dirs:      src
